--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,7 @@
     {{content-for "head"}}
     {{content-for "test-head"}}
 
+    <link rel="stylesheet" href="{{rootURL}}assets/tailwind.css">
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/survey-netlify.css">
     <link rel="stylesheet" href="{{rootURL}}assets/test-support.css">
@@ -28,7 +29,7 @@
       </div>
     </div>
 
-    <script src="/testem.js" integrity="" data-embroider-ignore></script>
+    <script src="/testem.js" integrity="" data-embroider-ignore=""></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/test-support.js"></script>
     <script src="{{rootURL}}assets/survey-netlify.js"></script>
